[package]
name = "flight-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
arrow-flight = "41.0.0"
clap = { version = "4.3.2", features = ["derive"] }
human_bytes = "0.4.2"
tokio = { version = "1.28.2", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
