[package]
name = "flight-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
arrow-flight = "41.0.0"
byte-unit = { version = "4.0.19", default-features = false }
clap = { version = "4.3.2", features = ["derive"] }
tokio = { version = "1.28.2", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tonic = "0.9.2"
