[package]
name = "flight-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
arrow-flight = "41.0.0"
byte-unit = { version = "4.0.19", default-features = false }
bytes = "1.4.0"
chrono = { version = "0.4.26", default-features = false, features = [
    "std",
    "clock",
] }
clap = { version = "4.3.2", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tonic = "0.9.2"
futures = "0.3"
ctrlc = "3.4.0"
hdrhistogram = "7.5.2"
